--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
-show_downloads: true
+title: ساختمان محتشم
+description: واحد 15 آقای رضایی
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
