--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ساختمان محتشم
-description: واحد 15 آقای رضایی
+description: واحد 15 آقای رضایی – شریعتی
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
